--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,13 @@
             <groupId>javax.servlet</groupId>  
             <artifactId>javax.servlet-api</artifactId>  
         </dependency>  
+        
+        <dependency>  
+            <groupId>com.rainbow.jenkins</groupId>  
+            <artifactId>jenkins-utils</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>  
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
